localization edit and remove todo
- added localizations for prev, next, page and asset per page

--- a/Localizations/en_US.json
+++ b/Localizations/en_US.json
@@ -6,6 +6,7 @@
     "asset_bundle_name": "Asset Bundle Name",
     "asset_ripper_free": "AssetRipper Free",
     "asset_ripper_premium": "AssetRipper Premium",
+    "asset_per_page": "Asset Per Page",
     "asset_tab_audio": "Audio",
     "asset_tab_audio_duration_unknown": "<Unknown>",
     "asset_tab_audio_pause": "Pause",
@@ -156,6 +157,7 @@
     "mesh_format_native_description": "A robust format for using meshes in the editor. Can be converted to other formats by a variety of Unity packages.",
     "name": "Name",
     "namespace": "Namespace",
+    "next":  "Next",
     "no_data_has_been_loaded_for_this_key": "No data has been loaded for this key.",
     "no_files_loaded": "No Files Loaded",
     "no_game_files_found": "No Unity game or asset bundle was found in the dropped files.",
@@ -169,11 +171,13 @@
     "open_api_json": "OpenAPI JSON",
     "original_path": "Original Path",
     "override_path": "Override Path",
+    "page":  "Page",
     "parent": "Parent",
     "path": "Path",
     "path_id": "Path ID",
     "premium_feature_notice": "Premium feature",
     "premium_features": "Premium Features",
+    "prev":  "Prev",
     "privacy": "Privacy",
     "publicize_assemblies": "Publicize Assemblies",
     "remove": "Remove",
