--- a/Localizations/en_US.json
+++ b/Localizations/en_US.json
@@ -177,7 +177,7 @@
     "path_id": "Path ID",
     "premium_feature_notice": "Premium feature",
     "premium_features": "Premium Features",
-    "prev":  "Prev",
+    "previous":  "Previous",
     "privacy": "Privacy",
     "publicize_assemblies": "Publicize Assemblies",
     "remove": "Remove",
