--- a/Localizations/en_US.json
+++ b/Localizations/en_US.json
@@ -6,7 +6,7 @@
     "asset_bundle_name": "Asset Bundle Name",
     "asset_ripper_free": "AssetRipper Free",
     "asset_ripper_premium": "AssetRipper Premium",
-    "asset_per_page": "Asset Per Page",
+    "assets_per_page": "Assets Per Page",
     "asset_tab_audio": "Audio",
     "asset_tab_audio_duration_unknown": "<Unknown>",
     "asset_tab_audio_pause": "Pause",
